# SpectreDash

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test.py  test_run.py
.github/workflows/: docker.yml
src/sp3ctrapp/: __init__.py  app.py  getduck.py  moduleAbout.py  moduleClass.py  moduleDiff.py  moduleLabels.py  moduleOverview.py  modulePipe.py  moduleValidation.py  moduleVariables.py  plots.py  tables.py  utils.py
src/spectredash/: __init__.py  about.py  app.py  duckdb_table.py  getduck.py  getgit.py  math_tools.py  moduleAbout.py  moduleClass.py  moduleDiff.py  moduleLabels.py  moduleOverview.py  modulePipe.py  moduleValidation.py  moduleVariables.py  module_about.py  plots.py  run_app.py  server.py  state.py  tables.py  ui.py  utils.py
