[tool.poetry]
name = "spectredash"
version = "0.1.0"
description = "Experimental dashboard for spectral data"
authors = ["edgar.treischl <edgar.treischl@isb.bayern.de>"]
readme = "README.md"
packages = [{ include = "spectredash", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
numpy = "^1.26.0"
shiny = "^0.1.0"  # Add Shiny for Python dependency
duckdb = "^0.3.0" # If you use DuckDB

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
