[tool.poetry]
name = "spectredash"
version = "0.1.0"
description = "Experimental dashboard for spectral data"
authors = ["edgar.treischl <edgar.treischl@isb.bayern.de>"]
readme = "README.md"
packages = [{ include = "spectredash", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
shiny = "^1.4.0"
duckdb = "^1.3.2"
emoji = "^2.14.1"
pathlib = "^1.0.1"
pandas = "^2.3.2"
python-gitlab = "^6.3.0"
datetime = "^5.5"
dotenv = "^0.9.9"
plotnine = "^0.15.0"
htmltools = "^0.6.0"
great-tables = "^0.18.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
